# voice-generation-library

./: .coveragerc  .gitignore  .mcp.json  CLAUDE.md  DEPLOYMENT_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  PROJECT_INDEX.json  QUICK_START.md  README.md  REFACTORING_PROGRESS.md  TESTING_GUIDE.md  TESTING_PROGRESS.md  TEST_COVERAGE_SUMMARY.md  __init__.py  __main__.py  api.py  pyproject.toml  pytest.ini  requirements-dev.txt
clients/: __init__.py  base.py  cache.py  elevenlabs.py
core/: __init__.py  exceptions.py  generator.py  models.py  results.py  validator.py
examples/: calm_breathing.json
processors/: __init__.py  audio.py  metadata.py
storage/: __init__.py  base.py  filesystem.py
tests/: __init__.py  conftest.py  test_api.py  test_audio_processor.py  test_cli.py  test_generator.py  test_integration.py  test_metadata.py  test_models.py  test_storage.py  test_tts_client.py  test_validator.py
voice_processing_presets/: fabfilter_pro_l2_preset.json  fabfilter_pro_q3_preset.json  nectar4_preset.json  oxford_inflator.json  ozone_11_preset.json  rx11_de_ess.json  soothe2_preset.json
